samples/_failures_safe/1761665470_49ad6a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e4a6355e.c: In function ‘main’:
./samples/SAFE/__tmp_e4a6355e.c:163:11: error: expected ‘;’ at end of input
  163 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_e4a6355e.c:163:5: error: expected declaration or statement at end of input
  163 |     printf
      |     ^~~~~~
